syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "./proto";


// Connection represents a connection to a authenticate backend target.
message Connection {
  string id = 1;
  string uid = 2;
  string name = 3;
  string description = 4;
  string avatar = 5;
  google.protobuf.Duration expiry_time = 6;
  google.protobuf.Timestamp last_refresh = 7;
  google.protobuf.Struct data = 8;
  google.protobuf.Struct labels = 9;
}

message ConnectionStatus {
  enum Status {
    UNKNOWN = 0;
    CONNECTED = 1;
    DISCONNECTED = 2;
    PENDING = 3;
    FAILED = 4;
    ERROR = 5;
    UNAUTHORIZED = 6;
    FORBIDDEN = 7;
    BAD_REQUEST = 8;
    NOT_FOUND = 9;
    TIMEOUT = 10;
    UNAVAILABLE = 11;
    REQUEST_ENTITY_TOO_LARGE = 12;
  }
  Connection connection = 1;
  Status status = 2;
  string error = 3;
  string details = 4;
}

message ConnectionList {
  repeated Connection connections = 1;
}

message ConnectionRequest {
  string id = 1;
}

message UpdateConnectionRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue avatar = 4;
  google.protobuf.Struct labels = 5;
}

message ConnectionNamespacesResponse {
  repeated string namespaces = 1;
}
